--- a/views/partials/Header.ejs
+++ b/views/partials/Header.ejs
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>EMS</title>
 </head>
+    <nav class="container-nav box-shadow">
+        <div class="container-nav-title">
+            <img src="img/bfar-logo.png" alt="">
+            <h1>BFAR <span>EMS</span></h1>
+        </div>
+    </nav>
 <body>
     
