update: added user roles

--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -4,7 +4,7 @@
             <label for="employee">Dashboard</label>
             <div class="container-aside-list-dropdown active">
                 <a href="#">
-                    <i class="fa-solid fa-chart-area"></i>
+                    <i class="fa-solid fa-chart-bar"></i>
                     <label for="">Dashboard</label>
                 </a>
             </div>
@@ -22,7 +22,7 @@
             <label for="employee">Payroll</label>
             <div class="container-aside-list-dropdown">
                 <a href="#">
-                    <i class="fa-solid fa-money-bill-1-wave"></i>
+                    <i class="fa-solid fa-receipt"></i>
                     <label for="">Payment</label>
                 </a>
             </div>
