--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Frank+Ruhl+Libre:wght@300;400;500;700&family=Inconsolata:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Spectral:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap');
 *{
     margin: 0;
     padding:0;
@@ -12,8 +11,8 @@ body{
     margin: 0;
     padding:0;
     background-color: #f5f6fa;
-    font-family: 'Open Sans', sans-serif;
-    color: #353b48;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #2f3542;
 }
 
 main, aside, nav{
@@ -21,6 +20,9 @@ main, aside, nav{
 }
 
 /*
+
+ASIDE
+SORA 
 
 button-submit
 #3498db
@@ -54,6 +56,29 @@ p{
 button{
     border: none;
 }
+table{
+    border-collapse:collapse;
+}
+td, th, tr{
+    text-align: center;
+    padding: 0;
+}
+
+th{
+    
+    background-color: #FAFAFA;
+    padding: .5em .25em;
+}
+td{
+    border-bottom: 1px solid #f1f2f6;
+    padding: 1em .25em;
+}
+
+tr:hover{
+    background-color: #FAFAFA;
+}
+
+/*  */
 
 
 .button-submit{
@@ -115,6 +140,7 @@ button{
 
 .container-aside, .container-aside *{
     background-color: #ffff;
+    font-weight: 500;
 }
 .container-aside{
     display: flex;
@@ -142,7 +168,7 @@ button{
 /* LISTS - DROPDOWN */
 
 .active{
-    border-right: 4px solid #44bd32;
+    border-right: 4px solid #1dd1a1;
     opacity: .75;
 }
     
@@ -192,11 +218,18 @@ button{
 
 .box i{
     font-size: 3rem;
+    align-self: center;
+    padding: .4em;
+    border-radius: 50px;
+    
+    color: #ffff;
 }
 
-.blue{
-    
-    color: #0984e3;
+.blue-bg{
+    background-color: #54a0ff;
+}
+.yellow{
+    color: #eccc68;
 }
 
 .dashboard{
@@ -204,6 +237,11 @@ button{
     flex-direction: column;
     padding: 2em;
     gap: 2em;
+    
+}
+
+.dashboard h1{
+    font-size: 1rem;
 }
 
 .dashboard div{
@@ -223,12 +261,14 @@ button{
     font-weight: 500;
 }
 
-.dashboard .dashboard-employees{
+/* EMPLOYEE CONTAINER */
+.employees{
     display: flex;
+    flex-direction: column;
     gap: 2em;
 }
 
-.dashboard .dashboard-employees .dashboard-employee-query{
+.employees .employee-query{
     width: 100%;
     padding: 2em;
     background-color: #ffff;
@@ -238,39 +278,49 @@ button{
 }
 
 /* EMPLOYEE SEARCH */
-.dashboard-employee-query .dashboard-employee-query-search{
+.employee-query .employee-query-search{
     padding-right: 1em;
     width: 50%;
     height: 50px;
 }
-.dashboard-employee-query .dashboard-employee-query-search, .dashboard-employee-query-search button{
+.employee-query .employee-query-search, .employee-query-search button{
     border: 1px solid #353b48;
     border-radius: 5px;
 }
-.dashboard-employee-query-search form{
+.employee-query-search form{
     width: 100%;
     height: 100%;
     display: flex;
 }
+/* EMPLOYEE TABLE */
+.employee-container{
+}
+
+.employee-table{
+    width: 100%;
+    background-color: #ffff;
+}
 
 
-.dashboard-employee-query-search input{
+
+
+.employee-query-search input{
     width: 100%;
     border: none;
     line-height: 40px;
     font-size: 1rem;
 }
-.dashboard-employee-query-search input:focus {
+.employee-query-search input:focus {
     outline: none;
 }
 
-.dashboard-employee-query-search button{
+.employee-query-search button{
     width: 50px;
     border: none;
     background-color: #ffff;
     padding: .5em;
 }
-.dashboard-employee-query-search button i{
+.employee-query-search button i{
     opacity: .5;
 }
 
