--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,4 +1,5 @@
 <%-include('partials/Header')%>
+<%-include('partials/Nav') %> 
 <%-include('partials/Aside')%>
 
 <main>
@@ -6,7 +7,7 @@
         <div class="dashboard-total-res">
             <div class="box box-shadow">
                 <h1 for="">Total Employee</h1>
-                <i class="fa-solid fa-people-group "></i>
+                <i class="fa-solid fa-people-group blue-circle blue-bg"></i>
             </div>
             <div class="box box-shadow">
                 <h1 for="">LOREM IPSUM</h1>
@@ -16,10 +17,10 @@
             </div>
         </div>
 
-        <div class="dashboard-employees ">
-            <div class="dashboard-employee-query box-shadow">
+        <div class="employees">
+            <div class="employee-query box-shadow">
                 <h1>Employee</h1>
-                <div class="dashboard-employee-query-search">
+                <div class="employee-query-search">
                     <form novalidate role="search">
                         <button>
                             <i class="fa-solid fa-magnifying-glass"></i>
@@ -27,6 +28,41 @@
                         <input type="text" placeholder="Type your query here and press enter">
                     </form>
                 </div>
+            </div>
+            <div class="employee-container box-shadow">
+                <table class="employee-table">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Email</th>
+                        <th>Contact</th>
+                        <th>Position</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Kenneth Gervacio</td>
+                        <td>20</td>
+                        <td>Sample@gmail.com</td>
+                        <td>09123456789</td>
+                        <td>Backend</td>
+                        <td>
+                            <button>View</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Kenneth Gervacio</td>
+                        <td>20</td>
+                        <td>Sample@gmail.com</td>
+                        <td>09123456789</td>
+                        <td>Backend</td>
+                        <td>
+                            <button>View</button>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
