--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -22,11 +22,55 @@
                     <input type='password' name="password"></input>
                     <label for="error" class="password error" ></label>
                 </div>
-                <button class="button-submit" onclick="submitFunc('register')">Register</button>
+                <div class="roles">
+                    <select name="roles" id="roles">
+                        <option value="admin">Admin</option>
+                        <option value="user">User</option>
+                    </select>
+                </div>
+                <button class="button-submit">Register</button>
                 <label for=""> Have an account already? </label><a href="/login">  Click here </Link>
             </form>
         </div>
     </div>
 </div>
+<script>
+    const form = document.querySelector('form')
+    const emailErr = document.querySelector('label.email.error')
+    const passErr = document.querySelector('label.password.error')
+    const ddl = document.querySelector('#roles')
+    
+    form.addEventListener('submit', async (e)=>{
+        e.preventDefault();
+        
+        const email = form.email.value
+        const password = form.password.value
+        const role = ddl.value
+        try{
+            const res = await fetch(`/register`, {
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({email, password, role}),
+                method: 'POST'
+            })
+            const data = await res.json()
+            console.log(data)
+            if(data.err){
+                emailErr.textContent = data.err.email
+                passErr.textContent = data.err.password
+            }
 
+            if(data.user){
+                if(data.user.role === "admin"){
+                    location.assign('/')
+                }else{
+                    location.assign('/logout')
+                }
+            }
+            
+        }catch(err){
+            console.log(err)
+        }
+    
+    })
+</script>
 <%-include('partials/Footer')%>
