created: api for total employee, updated: employee list table

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -35,7 +35,10 @@
                                         <td><%=user.email%></td>
                                         <td><%=user.contact%></td>
                                         <td><%=user.position%></td>
-                                        <td><button>view</button></td>
+                                        <td>
+                                            <button class="view">view</button>
+                                            <button class="edit">edit</button>
+                                        </td>
                                     </tr>
                                 <%}); %>
                             </table>
