--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -6,7 +6,10 @@
     <div class="container dashboard">
         <div class="dashboard-total-res">
             <div class="box box-shadow">
-                <h1 for="">Total Employee</h1>
+                <div class="total-count">
+                    <h1 for="">Total Employees</h1>
+                    <h1><%=data.empC%></h1>
+                </div>
                 <i class="fa-solid fa-people-group blue-circle blue-bg"></i>
             </div>
             <div class="box box-shadow">
