--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap+Condensed:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Frank+Ruhl+Libre:wght@300;400;500;700&family=Inconsolata:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Spectral:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&family=Spectral:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap');
 *{
     margin: 0;
     padding:0;
@@ -11,7 +11,7 @@ body{
     margin: 0;
     padding:0;
     background-color: #f5f6fa;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #2f3542;
 }
 
@@ -110,7 +110,9 @@ tr:hover{
 .container-nav{
     position: relative;
     z-index: 40;
-    background-color: #ffff;
+    
+    /* background-image: linear-gradient(to right, #ffeaa7 , #74b9ff); */
+    background-color: #FAFAFA;
 }
 
 .container-nav-title{
@@ -210,19 +212,45 @@ tr:hover{
 /* BOX LAYOUT */
 .box{
     height: 150px;
-    background-color: #ffff;
-    padding: 2.5em;
+    
+    /* background-color: #ffff; */
+    padding: 1em;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
 }
 
+.box h1{
+    color: #FAFAFA;
+}
 .box i{
-    font-size: 3rem;
+    font-size: 4.5rem;
     align-self: center;
     padding: .4em;
     border-radius: 50px;
-    
-    color: #ffff;
+    background: transparent;
+    color: #FAFAFA;
+}
+
+.box:nth-child(1){
+    background: linear-gradient(to bottom right, #1dd1a1 0%, #10ac84 100%);
+}
+.box:nth-child(2){
+    background: linear-gradient(to bottom right, #54a0ff 0%, #2e86de 100%);
+}
+.box:nth-child(3){
+    background: linear-gradient(to bottom right, #feca57 0%, #ff9f43 100%);
+}
+
+.box .total-count{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box .total-count h1:nth-child(2){
+    font-size: 4.5rem;
+    font-weight: 100;
+    text-align: center;
 }
 
 .blue-bg{
@@ -266,11 +294,12 @@ tr:hover{
     display: flex;
     flex-direction: column;
     gap: 2em;
+    
 }
 
 .employees .employee-query{
     width: 100%;
-    padding: 2em;
+    padding: 1em 2em;
     background-color: #ffff;
     display: flex;
     justify-content: space-between;
@@ -282,16 +311,45 @@ tr:hover{
     padding-right: 1em;
     width: 50%;
     height: 50px;
-}
-.employee-query .employee-query-search, .employee-query-search button{
-    border: 1px solid #353b48;
-    border-radius: 5px;
+    background-color: #f1f2f6;
 }
 .employee-query-search form{
     width: 100%;
     height: 100%;
     display: flex;
+    background-color: #f1f2f6;
 }
+.employee-query-search input{
+    width: 100%;
+    border: none;
+    line-height: 40px;
+    font-size: 1rem;
+    background-color: #f1f2f6;
+    padding-left: 1em;
+}
+.employee-query-search input:focus {
+    outline: none;
+    background-color: #f1f2f6;
+}
+
+.employee-query-search button{
+    width: 50px;
+    border: none;
+    background-color: #1dd1a1;
+    padding: .5em;
+    border-radius: 5px 0 0 5px ;
+}
+.employee-query-search button:hover{
+    width: 50px;
+    border: none;
+    background-color: #10ac84;
+    padding: .5em;
+    border-radius: 5px 0 0 5px ;
+}
+.employee-query-search button i{
+    color:#FAFAFA;
+}
+
 /* EMPLOYEE TABLE */
 .employee-container{
 }
@@ -301,28 +359,25 @@ tr:hover{
     background-color: #ffff;
 }
 
-
-
-
-.employee-query-search input{
-    width: 100%;
-    border: none;
-    line-height: 40px;
-    font-size: 1rem;
-}
-.employee-query-search input:focus {
-    outline: none;
+.employee-table button.view{
+    background-color: #1dd1a1;
 }
 
-.employee-query-search button{
-    width: 50px;
-    border: none;
-    background-color: #ffff;
-    padding: .5em;
+.employee-table button.edit{
+    background-color: #54a0ff;
 }
-.employee-query-search button i{
-    opacity: .5;
+.employee-table button.view:hover{
+    background-color: #10ac84;
 }
+
+.employee-table button.edit:hover{
+    background-color: #2e86de;
+}
+.employee-table button{
+    color: #FAFAFA;
+    border-radius: 2px;
+}
+
 
 
 /* LOGIN */
