have the code properly organized, and optimized.

--- a/views/TimeMonitoring.ejs
+++ b/views/TimeMonitoring.ejs
@@ -45,9 +45,9 @@
     form.addEventListener('submit', async (e) => {
         e.preventDefault()
         const employee_id = form.empid.value
-        const currentDate = (date.getMonth() + 1) + "/" + date.getDate() + "/" + date.getFullYear()
-        const time_in = date.toLocaleTimeString()
-        const time_out = date.toLocaleTimeString()
+        // const currentDate = (date.getMonth() + 1) + "/" + date.getDate() + "/" + date.getFullYear()
+        // const time_in = date.toLocaleTimeString()
+        // const time_out = date.toLocaleTimeString()
         const time_type = form.time_type.value
 
         try{
