--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -41,7 +41,7 @@
         <div class="container-aside-list">
             <label for="payroll">Attendance Management</label>
             <div class="container-aside-list-dropdown">
-                <a href="#">
+                <a href="/records">
                     <i class="fa-solid fa-calendar-check"></i>
                     <label for="">Records</label>
                 </a>
